<resources>
    <string name="app_name">InventoryApp</string>
    <string name="inventory_name">Inventory Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="picture">Capture Picture</string>
    <string name="changes_not_saved">Changes have NOT been Saved!</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="deletion_successful">Successfully Deleted</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="error_inserting_data">Error inserting data</string>
    <string name="data_inserted">Inserted inventory data</string>
    <string name="error_updating_data">Error updating data</string>
    <string name="data_updated">Successfully Updated data</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="sale">Sale</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="invalid_quantity">Invalid Quantity!</string>
    <string name="no_more_items_left">No more items left!</string>
    <string name="name_not_empty">Name cannot be empty!</string>
    <string name="quantity_less_than_1">Quantity cannot be less than 1</string>
    <string name="price_less_than_zero">Price should be more than 0!</string>
</resources>
